crates/data-dict/tests/snapshots/validate__lint_s07_wrong_rep_on_enum.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"lint/s07-wrong-rep-on-enum.yaml\")"
---
Error: [S07]
    ╭─[ lint/s07-wrong-rep-on-enum.yaml:11:15 ]
    │
 11 │       - name: status
    │               ───┬──  
    │                  ╰──── column `t.status` has type `enum` but is missing the required `values` property
────╯

Error: [S07]
    ╭─[ lint/s07-wrong-rep-on-enum.yaml:11:15 ]
    │
 11 │       - name: status
    │               ───┬──  
    │                  ╰──── column `t.status` has type `enum` but uses `range`; enum columns represent their data with `values`
────╯
