crates/data-dict/tests/snapshots/validate__schema_s03_missing_column.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"schema/s03-missing-column.yaml\")"
---
Error: [S07]
    ╭─[ schema/s03-missing-column.yaml:13:15 ]
    │
 13 │       - name: id
    │               ─┬  
    │                ╰── column `food.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S01]
    ╭─[ schema/s03-missing-column.yaml:17:15 ]
    │
 17 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` is marked `foreign_key` but no `relationships` entry points it at a `primary_key` column
────╯

Error: [S07]
    ╭─[ schema/s03-missing-column.yaml:17:15 ]
    │
 17 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ schema/s03-missing-column.yaml:27:15 ]
    │
 27 │       - name: id
    │               ─┬  
    │                ╰── column `food_category.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S03]
    ╭─[ schema/s03-missing-column.yaml:35:35 ]
    │
 35 │     join: food.food_category_id = food_category.identifier
    │                                   ────────────┬───────────  
    │                                               ╰───────────── column `identifier` is not defined in table `food_category`
────╯
