crates/data-dict/tests/snapshots/validate__schema_s04_bad_join.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"schema/s04-bad-join.yaml\")"
---
Error: [S07]
    ╭─[ schema/s04-bad-join.yaml:13:15 ]
    │
 13 │       - name: id
    │               ─┬  
    │                ╰── column `food.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S01]
    ╭─[ schema/s04-bad-join.yaml:17:15 ]
    │
 17 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` is marked `foreign_key` but no `relationships` entry points it at a `primary_key` column
────╯

Error: [S07]
    ╭─[ schema/s04-bad-join.yaml:17:15 ]
    │
 17 │       - name: food_category_id
    │               ────────┬───────  
    │                       ╰───────── column `food.food_category_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ schema/s04-bad-join.yaml:27:15 ]
    │
 27 │       - name: id
    │               ─┬  
    │                ╰── column `food_category.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S04]
    ╭─[ schema/s04-bad-join.yaml:35:33 ]
    │
 35 │     join: food.food_category_id ~ food_category.id
    │                                 │ 
    │                                 ╰─ `join` expression does not parse: expected one of `=`, `>=`, `<=`, `>`, `<`
────╯
