crates/data-dict/tests/snapshots/validate__schema_s06_cardinality_mismatch.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"schema/s06-cardinality-mismatch.yaml\")"
---
Error: [S07]
    ╭─[ schema/s06-cardinality-mismatch.yaml:15:15 ]
    │
 15 │       - name: id
    │               ─┬  
    │                ╰── column `transaction.id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ schema/s06-cardinality-mismatch.yaml:19:15 ]
    │
 19 │       - name: account_id
    │               ─────┬────  
    │                    ╰────── column `transaction.account_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S07]
    ╭─[ schema/s06-cardinality-mismatch.yaml:29:15 ]
    │
 29 │       - name: account_id
    │               ─────┬────  
    │                    ╰────── column `account.account_id` has type `number(id)` but is missing the expected `examples` property
────╯

Error: [S06]
    ╭─[ schema/s06-cardinality-mismatch.yaml:36:18 ]
    │
 36 │     cardinality: many-to-one
    │                  ─────┬─────  
    │                       ╰─────── cardinality is `many-to-one` but the right-side join column on `account` is not marked `primary_key` or `unique`
────╯
