crates/data-dict/tests/snapshots/validate__schema_s07_enum_without_values.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"schema/s07-enum-without-values.yaml\")"
---
Error: [S07]
    ╭─[ schema/s07-enum-without-values.yaml:11:15 ]
    │
 11 │       - name: c
    │               ┬  
    │               ╰── column `t.c` has type `enum` but is missing the required `values` property
────╯
