crates/data-dict/tests/snapshots/validate__schema_s07_range_type_missing_range.snap
---
source: crates/data-dict/tests/validate.rs
expression: "failing_diagnostic(\"schema/s07-range-type-missing-range.yaml\")"
---
Error: [S07]
    ╭─[ schema/s07-range-type-missing-range.yaml:11:15 ]
    │
 11 │       - name: weight
    │               ───┬──  
    │                  ╰──── column `t.weight` has type `number(quantity)` but is missing the expected `range` property
────╯

Error: [S07]
    ╭─[ schema/s07-range-type-missing-range.yaml:14:15 ]
    │
 14 │       - name: recorded_at
    │               ─────┬─────  
    │                    ╰─────── column `t.recorded_at` has type `date` but is missing the expected `range` property
────╯
